# python-ucsfndt

./: CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: index.rst  reference.rst  usage.rst
examples/: upenn_export.py
src/templatepackage/: header.py
src/ucsfndt/: header.py
src/ucsfndt/mxbids/: __init__.py
src/ucsfndt/mxbids/exporters/: __init__.py
src/ucsfndt/mxbids/exporters/upenn/: __init__.py  anatomyupennexporter.py  ctupennexporter.py  datasetupennexporter.py  ieegupennexporter.py  sessionupennimplantexporter.py  sessionupennpreimplantexporter.py  subjectupennexporter.py
src/ucsfndt/mxbids/importers/: __init__.py
src/ucsfndt/mxbids/importers/pia/: __init__.py  anatomypiaimporter.py  ctpiaimporter.py  datasetpiaimporter.py  ieegpiaimporter.py  sessionpiaimporter.py  subjectpiaimporter.py
tests/mxbids/: test_piaimporter.py  test_upenn_exporter.py
